Added outline for header to be improved later.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Julia Jespersdotter Högman</title>
+
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <div class="container">
+
+        <!-- Sticky header -->
+        <header>
+            <nav>
+                <img id="logo" src="" alt="">
+
+                <div class="links-wrapper">
+                    <a href="">Home</a>
+                    <a href="">About</a>
+                    <a href="">Projects</a>
+                    <button class="contact">Contact me</button>
+                </div>
+            </nav>
+        </header>
+
+        <div id="hero">
+            <div id="hero-text">
+                <h1>Hello, I'm Julia Jespersdotter Högman.</h1>
+            </div>
+        </div>
+
+        <section class="projects">
+            <!-- 3 columns with images embedded with links to project page -->
+        </section>
+    </div>
     
 </body>
 </html>
