--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <link rel="stylesheet" href="css/main.css">
 
+    <script src="https://kit.fontawesome.com/d26e61a199.js" crossorigin="anonymous"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Tinos&display=swap" rel="stylesheet"> 
@@ -103,32 +105,29 @@
                     <article>
                         <div class="skills-wrapper">
                             <div class="skill">
-                                <img class="skill-image" src="" alt="">
-                                <h3>Javascript</h3>
+                                <img class="img-fixed" src="/assets/js.png" alt="">
+                                <h3>JavaScript</h3>
                             </div>
                             <div class="skill">
-                                <img class="skill-image" src="" alt="">
+                                
+                                <img class="img-fixed" src="/assets/html.png" alt="">
                                 <h3>HTML</h3>
                             </div>
                             <div class="skill">
-                                <img class="skill-image" src="" alt="">
+                                <img class="img-fixed" src="/assets/css-3.png" alt="">
                                 <h3>CSS</h3>
                             </div>
                             <div class="skill">
-                                <img class="skill-image" src="" alt="">
+                                <img class="img-fixed" src="/assets/bootstrap.png" alt="">
                                 <h3>Bootstrap</h3>
                             </div>
                             <div class="skill">
-                                <img class="skill-image" src="" alt="">
-                                <h3>Express.js</h3>
-                            </div>
-                            <div class="skill">
-                                <img class="skill-image" src="" alt="">
-                                <h3>Node.js</h3>
-                            </div>
-                            <div class="skill">
-                                <img class="skill-image" src="" alt="">
+                                <img class="img-fixed" src="/assets/figma.png" alt="">
                                 <h3>Figma</h3>
+                            </div>
+                            <div class="skill">
+                                <img class="img-fixed" src="/assets/git-icon.png" alt="">
+                                <h3>Git</h3>
                             </div>
                         </div>
                     </article>
