Changed font weight and padding on bigger screens.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Tinos&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&family=Tinos&display=swap" rel="stylesheet"> 
 </head>
 <body>
     <main>
@@ -50,7 +50,7 @@
                 <article>
                     <!-- <hr id="line"> -->
                     <h2>About me</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste perferendis dolores doloribus incidunt autem, at modi. Consectetur fugit iste, maxime, modi eum mollitia esse accusantium est impedit, unde ipsa sunt?</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste perferendis dolores doloribus incidunt autem, at modi. Consectetur fugit iste, maxime, modi eum mollitia esse accusantium est impedit, unde ipsa sunt? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum maxime sint aliquam optio magnam ipsam maiores nihil! Sed fugiat asperiores repellendus, mollitia consequatur minima non qui, eos animi quibusdam necessitatibus.</p>
                 </article>
             </section>
     
@@ -136,7 +136,7 @@
             </main>
             
             <footer>
-                <div class="social-links section-padding">
+                <div class="social-links">
                     <div class="link-wrapper">
                         <a href="mailto:julia.jespersdotter@gmail.com"><i class="fas fa-envelope"></i></a>
                         <a href="mailto:julia.jespersdotter@gmail.com">GMAIL</a>
