Changed section padding to be less spacious.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <h3 class="title">FRONT END DEVELOPER</h3>
                     <h1>Julia Jespersdotter Högman</h1>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit veniam incidunt cumque numquam sint blanditiis maiores facilis, itaque repellat placeat in quasi corrupti nihil expedita repudiandae illo obcaecati beatae. Expedita.</p>
-                    <button class ="button-gradient" href="">Contact me</button>
+                    <button class ="button-gradient" href="mailto:julia.jespersdotter@gmail.com">Contact me</button>
                 </div>
                 
                 <img id="me" src="assets/juliajespersdotter.png" alt="">
