--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <div id="hero" class="section-padding">
                 <div id="hero-text">
                     <h3 class="title">FRONT END DEVELOPER</h3>
-                    <h1>Julia Jespersdotter Högman</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit veniam incidunt cumque numquam sint blanditiis maiores facilis, itaque repellat placeat in quasi corrupti nihil expedita repudiandae illo obcaecati beatae. Expedita.</p>
+                    <h1>Hi, I'm Julia Jespersdotter</h1>
+                    <p>I'm a front end developer student based in Malmö open to internship opportunities to expand my skillset.</p>
                     <button class ="button-gradient" href="mailto:julia.jespersdotter@gmail.com">Contact me</button>
                 </div>
                 
@@ -50,7 +50,7 @@
                 <article>
                     <!-- <hr id="line"> -->
                     <h2>About me</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste perferendis dolores doloribus incidunt autem, at modi. Consectetur fugit iste, maxime, modi eum mollitia esse accusantium est impedit, unde ipsa sunt? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum maxime sint aliquam optio magnam ipsam maiores nihil! Sed fugiat asperiores repellendus, mollitia consequatur minima non qui, eos animi quibusdam necessitatibus.</p>
+                    <p>I'm a passionate and driven student working towards becoming a fullstack developer by getting my foot in the door with my front end skills. I develop websites with HTML, CSS and JavaScript. I strive towards making functional and accessible web services and experiences.</p>
                 </article>
             </section>
     
