Changed typo and added some more skills png.

--- a/assets/html/projects.html
+++ b/assets/html/projects.html
@@ -28,9 +28,9 @@
                         <a href="../../index.html">Home</a>
     
                         <div class="right-flexed">
-                            <a class="nav-links" href="./assets/documents/CV.pdf" target="_blank">CV</a>
+                            <a class="nav-links" href="../documents/CV.pdf" target="_blank">CV</a>
                             <a class="nav-links" href="#">Projects</a>
-                            <button class ="button-gradient" href="mailto:julia.jespersdotter@gmail.com">Contact</button>
+                            <button class ="button-gradient"><a href="mailto:julia.jespersdotter@gmail.com" target="_blank">Contact</a></button>
                         </div>
                     </div>
                 </nav>
