--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                 </div>
             
                                 <p>
-                                    A clone of <a id="text-link" href="www.oddhill.se">Odd Hill's</a> front page made with HTML and CSS to practice mimicking other designs and making it responsive. The 
+                                    A clone of <a id="text-link" href="www.oddhill.se">Odd Hill's</a> front page made with HTML and CSS to practice mimicking other designs and making it responsive. 
                                 </p>
                             </div>
 
@@ -146,6 +146,18 @@
                             <div class="skill">
                                 <img class="img-fixed" src="assets/images/git-icon.png" alt="">
                                 <h3>Git</h3>
+                            </div>
+                            <div class="skill">
+                                <img class="img-fixed" src="assets/images/ExpressJS.png" alt="">
+                                <h3>Express</h3>
+                            </div>
+                            <div class="skill">
+                                <img class="img-fixed" src="assets/images/nodejs.png" alt="">
+                                <h3>Node</h3>
+                            </div>
+                            <div class="skill">
+                                <img class="img-fixed" src="assets/images/MySQL.png" alt="">
+                                <h3>MySQL</h3>
                             </div>
                         </div>
                     </article>
